2001-07-21  Tom Tromey  <tromey@redhat.com>

	* tests/ccnoco.test: Removed `configure.2' test; in autocon 2.50
	AC_PROG_CC_C_O does require AC_PROG_CC.

	From Erik Lindahl:
	* lib/depcomp (tru64): Some Tru64 compilers use `foo.d' and not
	`foo.o.d'.
	* m4/depend.m4 (_AM_DEPENDENCIES): Check to make sure compilation
	output is suitable for make.

	* automake.texi (Macros): Document AM_PROG_AS.
	(Assembly Support): New node.
	* m4/Makefile.am (m4data_DATA): Added as.m4.
	* m4/as.m4: New file.

	* automake.texi (Tags): Added uref to global tags.

2001-07-21  Tim Van Holder  <tim.van.holder@pandora.be>

	* automake.in (handle_single_transform_list): Use $(DEPDIR)
	instead of hardcoding '.deps'.
	* m4/depend.m4 (AM_SET_DEPDIR): Sync with libtool's libdir check.

2001-07-20  Derek Price  <dprice@collab.net>

	* m4/header.m4 (AM_CONFIG_HEADER): Create stamp-h files in the correct
	locations.
	* tests/dirname.test: New test.
	* tests/stamph2.test: New test.
	* tests/Makefile.am: Add new tests.
	* tests/Makefile.in: Regenerated.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Tags): Document GTAGS_ARGS.
	* lib/am/tags.am (GTAGS): Added GTAGS_ARGS.  From Shigio Yamaguchi.

2001-07-19  Tom Tromey  <tromey@redhat.com>
            Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for ccnoco.test, subobj8.test:
	* m4/Makefile.am (m4data_DATA): Added auxdir.m4.
	* tests/Makefile.am (XFAIL_TESTS): Removed ccnoco.test,
	subobj8.test.
	* m4/minuso.m4 (AM_PROG_CC_C_O): Use absolute path to compile.
	Use AM_AUX_DIR_EXPAND.
	* lib/compile: Handle case where `-o' argument is the name of an
	executable, not an object file.
	* m4/auxdir.m4: New file, from...
	* m4/missing.m4: ... here.  Moved AM_AUX_DIR_EXPAND.
	* automake.in (handle_single_transform_list, lang_c_rewrite):
	Require compile using `require_config_file'.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Program and Library Variables): Added X example
	for _LDADD.
