@@ -99,6 +99,7 @@ depacl.test \
 depacl2.test \
 depcomp.test \
 depcomp2.test \
+depdist.test \
 depend.test \
 depend2.test \
 depend3.test \
