@@ -1,0 +1,42 @@
+#! /bin/sh
+
+# Make sure depcomp is found for the distribution.
+# From Eric Magnien.
+
+. $srcdir/defs || exit 1
+
+rm -f configure.in
+
+mkdir config
+for i in *; do
+   if test $i != "config"; then
+      mv $i config
+   fi
+done
+
+cat > configure.in << 'END'
+AC_INIT(subdir/foo.c)
+AC_CONFIG_AUX_DIR(config)
+AM_INIT_AUTOMAKE(nonesuch, nonesuch)
+AC_PROG_CC
+AC_OUTPUT(subdir/Makefile Makefile)
+END
+
+cat > Makefile.am << 'END'
+SUBDIRS = subdir
+END
+
+mkdir subdir
+: > subdir/foo.c
+
+cat > subdir/Makefile.am << 'END'
+bin_PROGRAMS = foo
+foo_SOURCES = foo.c
+END
+
+set -e
+
+$ACLOCAL
+$AUTOMAKE --add-missing
+$AUTOCONF
+grep config/depcomp Makefile.in
