@@ -1,5 +1,14 @@
 2001-07-21  Tom Tromey  <tromey@redhat.com>
 
+	* automake.in (handle_dist): Handle case where aux dir doesn't
+	have a Makefile.  Fixes depdist.test.
+	* tests/Makefile.am (XFAIL_TESTS): Removed depdist.test.
+	* tests/depdist.test: Look for config/depcomp.
+
+	* tests/Makefile.am (TESTS): Added depdist.test.
+	(XFAIL_TESTS): Likewise.
+	* tests/depdist.test: New file.  From Eric Magnien.
+
 	* tests/ccnoco.test: Removed `configure.2' test; in autocon 2.50
 	AC_PROG_CC_C_O does require AC_PROG_CC.
 
